--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+    <groupId>io.springfox</groupId>
+    <artifactId>springfox-swagger2</artifactId>
+    <version>2.4.0</version>
+</dependency>
         <!-- https://mvnrepository.com/artifact/javax.xml.ws/jaxws-api -->
         <dependency>
             <groupId>javax.xml.ws</groupId>
